--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Weather App project</h1>
+      <h1>Final project: Weather app</h1>
     </div>
     <script src="src/app.js"></script>
   </body>
