Added the HTML structure.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,32 @@
   </head>
   <body>
     <div class="container">
-      <h1>Final project: Weather app</h1>
+      <div class="main-app-format">
+        <div class="row">
+          <div class="col-6">
+            <h1>City name</h1>
+            <h4>Monday, 29 November 2021</h4>
+            <h2>2° C | F</h2>
+            <ul>
+              <li>Sunrise</li>
+              <li>Sunset</li>
+              <li>Humidity</li>
+              <li>Wind</li>
+            </ul>
+          </div>
+          <div class="col-6">
+            <img src="" alt="weather icon" />
+
+            <h4>descriprion</h4>
+          </div>
+          <small>
+            <a href="https://github.com/BoAquarius/weather-app" targer="_blank"
+              >Open source code</a
+            >
+            by Bo Aquarius</small
+          >
+        </div>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
