Added some CSS styling.

--- a/index.html
+++ b/index.html
@@ -4,43 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Bozena's Weather App</title>
   </head>
   <body>
     <div class="container">
-      <div class="main-app-format">
-        <div class="row">
-          <div class="col-6">
-            <h1>City name</h1>
-            <h4>Monday, 29 November 2021</h4>
-            <h2>2° C | F</h2>
-            <ul>
-              <li>Sunrise</li>
-              <li>Sunset</li>
-              <li>Humidity</li>
-              <li>Wind</li>
-            </ul>
+      <div class="app-format">
+        <div class="app-format-top">
+          <div class="row">
+            <div class="col-6 left">
+              <h1>City name</h1>
+              <h4>Monday, 29 November 2021</h4>
+              <h2>2° C | F</h2>
+              <ul>
+                <li>Sunrise</li>
+                <li>Sunset</li>
+                <li>Humidity</li>
+                <li>Wind</li>
+              </ul>
+            </div>
+            <div class="col-6 right">
+              <img src="" alt="weather icon" />
+              <h4>descriprion</h4>
+            </div>
           </div>
-          <div class="col-6">
-            <img src="" alt="weather icon" />
-
-            <h4>descriprion</h4>
-          </div>
-          <small>
-            <a href="https://github.com/BoAquarius/weather-app" targer="_blank"
-              >Open source code</a
-            >
-            by Bo Aquarius</small
-          >
         </div>
       </div>
+      <div class="app-format-middle">
+        <p>FORECAST</p>
+      </div>
+      <small>
+        <a href="https://github.com/BoAquarius/weather-app" targer="_blank"
+          >Open source code</a
+        >
+        by Bo Aquarius</small
+      >
     </div>
     <script src="src/app.js"></script>
   </body>
