--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Bozena's Weather App</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container app-full">
       <div class="app-format">
         <div class="app-format-top">
           <div class="row">
@@ -41,16 +41,16 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="app-format-middle">
-        <p>FORECAST</p>
-      </div>
-      <small>
-        <a href="https://github.com/BoAquarius/weather-app" targer="_blank"
-          >Open source code</a
+        <div class="app-format-middle">
+          <p>FORECAST</p>
+        </div>
+        <small>
+          <a href="https://github.com/BoAquarius/weather-app" targer="_blank"
+            >Open source code</a
+          >
+          by Bo Aquarius</small
         >
-        by Bo Aquarius</small
-      >
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
