Added extra CSS

--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
     <title>Bozena's Weather App</title>
   </head>
   <body>
-    <div class="container app-full">
+    <div class="container app">
       <div class="app-format">
         <div class="app-format-top">
           <div class="row">
             <div class="col-6 left">
               <h1>City name</h1>
               <h4>Monday, 29 November 2021</h4>
-              <h2>2° C | F</h2>
+              <span class="degrees">2</span>
+              <span class="units">°C</span>
+              <span class="units devide">
+                | <a href="#" class="alrenative-unit">°F</a></span
+              >
               <ul>
                 <li>Sunrise</li>
                 <li>Sunset</li>
