--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bozena's Weather App</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,31 +18,70 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Bozena's Weather App</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="container app">
       <div class="app-format">
         <div class="app-format-top">
+          <div class="row search-bar">
+            <div class="col-3 find-current-location">
+              <button
+                type="button"
+                class="btn btn-light btn-sm text-nowrap shaddow-sm"
+                id="current-location-button"
+              >
+                Current location
+              </button>
+            </div>
+            <div class="col-9 find-city">
+              <form id="search-form">
+                <div class="row find-city">
+                  <div class="col-9">
+                    <input
+                      type="search"
+                      placeholder="Find city"
+                      class="form-control form-control-sm shaddow-sm"
+                      autocomplete="off"
+                      id="search-input"
+                    />
+                  </div>
+                  <div class="col-3">
+                    <input
+                      type="submit"
+                      value="Search"
+                      class="
+                        form-control form-control-sm
+                        btn btn-light btn-sm
+                        shaddow-sm
+                      "
+                    />
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
           <div class="row">
             <div class="col-6 left">
               <h1>City name</h1>
               <h4>Monday, 29 November 2021</h4>
-              <span class="degrees">2</span>
+              <span class="degrees" id="degrees">2</span>
               <span class="units">°C</span>
-              <span class="units devide">
+              <span class="units divide">
                 | <a href="#" class="alrenative-unit">°F</a></span
               >
               <ul>
-                <li>Sunrise</li>
-                <li>Sunset</li>
-                <li>Humidity</li>
-                <li>Wind</li>
+                <li>Sunrise: <span id="sunrise"></span></li>
+                <li>Sunset: <span id="sunset"></span></li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
             <div class="col-6 right">
               <img src="" alt="weather icon" />
-              <h4>descriprion</h4>
+              <h4 class="weather-description" id="weather-description">
+                descriprion
+              </h4>
             </div>
           </div>
         </div>
