Added JavaScript for the date.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <div class="row">
             <div class="col-6 left">
               <h1>City name</h1>
-              <h4>Monday, 29 November 2021</h4>
-              <span class="degrees" id="degrees">2</span>
+              <h4 id="date-today"></h4>
+              <span class="degrees" id="degrees"></span>
               <span class="units">°C</span>
               <span class="units divide">
                 | <a href="#" class="alrenative-unit">°F</a></span
