Added JavaScript for "current location" and relevant weather icon using API.

--- a/index.html
+++ b/index.html
@@ -62,14 +62,9 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-6 left">
+            <div class="col-5 left">
               <h1>City name</h1>
               <h4 id="date-today"></h4>
-              <span class="degrees" id="degrees"></span>
-              <span class="units">°C</span>
-              <span class="units divide">
-                | <a href="#" class="alrenative-unit">°F</a></span
-              >
               <ul>
                 <li>Sunrise: <span id="sunrise"></span></li>
                 <li>Sunset: <span id="sunset"></span></li>
@@ -77,8 +72,15 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
-            <div class="col-6 right">
-              <img src="" alt="weather icon" />
+            <div class="col-3 middle">
+              <span class="degrees" id="degrees"></span>
+              <span class="units">°C</span>
+              <span class="units divide">
+                | <a href="#" class="alrenative-unit">°F</a></span
+              >
+            </div>
+            <div class="col-4 right">
+              <img src="" alt="weather icon" id="icon" />
               <h4 class="weather-description" id="weather-description">
                 descriprion
               </h4>
