Added the unit conversion °C to °F and back.

--- a/index.html
+++ b/index.html
@@ -74,16 +74,15 @@
             </div>
             <div class="col-3 middle">
               <span class="degrees" id="degrees"></span>
-              <span class="units">°C</span>
+              <a href="#" class="units" id="celsious">°C</a>
               <span class="units divide">
-                | <a href="#" class="alrenative-unit">°F</a></span
-              >
+                |
+                <a href="#" class="alrenative-units" id="fahrenheit">°F</a>
+              </span>
+              <h4 class="weather-description" id="weather-description"></h4>
             </div>
             <div class="col-4 right">
               <img src="" alt="weather icon" id="icon" />
-              <h4 class="weather-description" id="weather-description">
-                descriprion
-              </h4>
             </div>
           </div>
         </div>
