Added styling to the units.

--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
             </div>
             <div class="col-3 middle">
               <span class="degrees" id="degrees"></span>
-              <a href="#" class="units" id="celsious">°C</a>
+              <span class="units"
+                ><a href="#" class="active-units" id="celsious">°C</a></span
+              >
               <span class="units divide">
                 |
-                <a href="#" class="alrenative-units" id="fahrenheit">°F</a>
+                <a href="#" class="alternative-units" id="fahrenheit">°F</a>
               </span>
               <h4 class="weather-description" id="weather-description"></h4>
             </div>
