Created JavaScript forecast framework with dummy data. Moved the HTML forecast section info the JS function.

--- a/index.html
+++ b/index.html
@@ -88,21 +88,14 @@
             </div>
           </div>
         </div>
-        <div class="row app-wrapper-middle">
-          <div class="col-2" id="forecast">
-            <div class="forecast-day">Next day</div>
-            <span class="forecast-max-temp">11°C</span>
-            <span class="forecast-temp-divider"> | </span>
-            <span class="forecast-min-temp">7°C</span>
-            <h1>🌧</h1>
-            <h4 class="forecast-description">Cloudy</h4>
-          </div>
+        <div class="app-wrapper-middle">
+          <div class="row" id="forecast"></div>
         </div>
         <div class="app-wrapper-footer">
           <small>
             <a href="https://github.com/BoAquarius/weather-app" targer="_blank">
-              Open source code
-            </a>
+              Open source code</a
+            >
             by Bo Aquarius
           </small>
         </div>
