--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
               </form>
             </div>
             <div class="col">
-              <h4 id="date-today"></h4>
+              <h4 class="date-today" id="date-today"></h4>
             </div>
           </div>
           <div class="row">
             <div class="col-5 left">
               <h1>City name</h1>
-              <h4 id="date-today"></h4>
               <ul>
                 <li>Sunrise: <span id="sunrise"></span></li>
                 <li>Sunset: <span id="sunset"></span></li>
@@ -83,7 +82,7 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
-            <div class="col-3 middle">
+            <div class="col-2 middle">
               <span class="degrees" id="degrees"></span>
               <span class="units"
                 ><a href="#" class="active-units" id="celsious">°C</a></span
@@ -93,7 +92,7 @@
                 <a href="#" class="alternative-units" id="fahrenheit">°F</a>
               </span>
             </div>
-            <div class="col-4 right">
+            <div class="col-3 right">
               <img src="" alt="weather icon" id="icon" />
               <div class="weather-description" id="weather-description"></div>
             </div>
