--- a/index.html
+++ b/index.html
@@ -75,12 +75,6 @@
           <div class="row">
             <div class="col-5 left">
               <h1>City name</h1>
-              <ul>
-                <li>Sunrise: <span id="sunrise"></span></li>
-                <li>Sunset: <span id="sunset"></span></li>
-                <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> km/h</li>
-              </ul>
             </div>
             <div class="col-2 middle">
               <span class="degrees" id="degrees"></span>
@@ -91,6 +85,10 @@
                 |
                 <a href="#" class="alternative-units" id="fahrenheit">°F</a>
               </span>
+              <ul class="weather-details">
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
             </div>
             <div class="col-3 right">
               <img src="" alt="weather icon" id="icon" />
@@ -106,7 +104,7 @@
   <small>
     <a href="https://github.com/BoAquarius/weather-app" targer="_blank">
       Open source code</a>
-    by <a href="" target="_blank">Bo Aquarius</a>
+    by <a href="https://www.linkedin.com/in/boaquarius/" target="_blank">Bo Aquarius</a>
   </small>
 </div>
     </div>
