Added responsiveness for screens:  >320px, >375px, >576px, 768px.

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
               </div>
             </div>
             <div class="row">
-              <div class="col left">
+              <div class="col-md left">
                 <h1>City name</h1>
               </div>
-              <div class="col middle">
+              <div class="col-md middle">
                 <span class="degrees" id="degrees"></span>
                 <span class="units"
                   ><a href="#" class="active-units" id="celsious">°C</a></span
@@ -125,7 +125,7 @@
                   <li>Wind: <span id="wind"></span> km/h</li>
                 </ul>
               </div>
-              <div class="col right">
+              <div class="col-md right">
                 <img src="" alt="weather icon" id="icon" />
                 <div class="weather-description" id="weather-description"></div>
               </div>
